<resources>
    <string name="app_name">IntervalMusic</string>
    <string name="option_beep">Beep</string>
    <string name="option_music">Music</string>
    <string name="btn_start">Start</string>
    <string name="title_rounds">Rounds</string>
    <string name="title_rest">Rest</string>
    <string name="title_work">Work</string>
    <string name="option_tickbeep">Tickbeep</string>
</resources>
