<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mkindberg.intervalmusic.MainActivity"
    android:id="@+id/backgound">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Interval timer"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_weight="0.25"
        style="@style/TextAppearance.AppCompat.Title"
        /> <!-- Title -->

    <TextView
        android:id="@+id/tv_seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="200dp"
        android:layout_weight="0.75"
        android:visibility="gone"
        android:textColor="#000"
        /> <!-- Countdown -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_work"
        android:layout_weight="0.25">

        <TextView
            android:id="@+id/tv_work_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_work"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/btn_work_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="editWork"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:src="@drawable/ic_indeterminate_check_box_black_24dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="-" />

            <EditText
                android:id="@+id/et_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:text="30"
                android:textAlignment="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                />

            <ImageButton
                android:id="@+id/btn_work_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:clickable="true"
                android:src="@drawable/ic_add_box_black_24dp"
                android:scaleX="1.7"
                android:scaleY="1.7"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:onClick="editWork"/>


        </LinearLayout>
    </LinearLayout> <!-- Work -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_rest"
        android:layout_weight="0.25"
        >

        <TextView
            android:id="@+id/tv_rest_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_rest"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <ImageButton
                android:id="@+id/btn_rest_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:src="@drawable/ic_indeterminate_check_box_black_24dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:onClick="editRest"/>

            <EditText
                android:id="@+id/et_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:text="15"
                android:textAlignment="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"/>

            <ImageButton
                android:id="@+id/btn_rest_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:src="@drawable/ic_add_box_black_24dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:onClick="editRest"/>


        </LinearLayout>
    </LinearLayout> <!-- Rest -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_rounds"
        android:layout_weight="0.25"
        >

        <TextView
            android:id="@+id/tv_rounds_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_rounds"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/btn_rounds_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:src="@drawable/ic_indeterminate_check_box_black_24dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:onClick="editRounds"/>

            <EditText
                android:id="@+id/et_rounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:text="15"
                android:textAlignment="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"/>

            <ImageButton
                android:id="@+id/btn_rounds_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:src="@drawable/ic_add_box_black_24dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:onClick="editRounds"/>


        </LinearLayout>
    </LinearLayout> <!-- Rounds -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rounds_left"
        android:textSize="30sp"
        android:visibility="gone"
        android:textAlignment="center"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/options"
        android:gravity="center"
        android:layout_margin="10dp">

    <CheckBox
        android:id="@+id/cb_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_music"
        />

    <CheckBox
        android:id="@+id/cb_beep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_beep" />
    <CheckBox
        android:id="@+id/cb_tickbeep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_tickbeep" />
    </LinearLayout> <!-- Checkboxes -->

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="start"
        android:text="@string/btn_start" /> <!-- Start -->
</LinearLayout>
